teste uniários para 100% do Jacoco e teste de integração end to end user crud